# python-masakariclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/cli/: commands.rst  masakari_commands.rst
doc/source/contributor/: contributing.rst  developing.rst  index.rst
doc/source/install/: index.rst
masakariclient/: __init__.py  api_versions.py  cliargs.py  client.py  plugin.py  shell.py
masakariclient/common/: exception.py  i18n.py  utils.py
masakariclient/osc/v1/: host.py  notification.py  segment.py  vmove.py
masakariclient/sdk/ha/: connection.py  ha_service.py
masakariclient/sdk/ha/v1/: _proxy.py  host.py  notification.py  segment.py
masakariclient/sdk/vmha/: connection.py  vmha_service.py
masakariclient/sdk/vmha/v1/: _proxy.py  host.py  notification.py  segment.py
masakariclient/tests/: test_masakariclient.py
masakariclient/tests/unit/: test_cliargs.py  test_client.py  test_shell.py
masakariclient/tests/unit/osc/v1/: test_host.py  test_notification.py  test_segment.py  test_vmove.py
masakariclient/tests/unit/v1/: fakes.py  test_client.py  test_shell.py
masakariclient/v1/: client.py  shell.py
releasenotes/notes/: add-version-support-for-progress-details-recovery-workflows-06614c76d44e64ff.yaml  blueprint-add-vmoves-a74335fec8446523.yaml  blueprint-enable-to-segment-3a938bdddbd57c88.yaml  bug-1764931-889d9fe4cfb80b01.yaml  deprecate-cli-9ffee25a5c3d1b3b.yaml  drop-py-2-7-d3c0f239678a4c83.yaml  drop-the-legacy-client-1b25f27aa5525295.yaml  remove-py38-py39-68bd210ea9f4c192.yaml
releasenotes/source/: conf.py  index.rst
