[metadata]
name = python-masakariclient
summary = masakariclient module and a CLI tool for masakari
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    masakariclient

[entry_points]
console_scripts =
    masakari = masakariclient.shell:main

openstack.cli.extension =
    ha = masakariclient.plugin

openstack.ha.v1 =
    notification_create = masakariclient.osc.v1.notification:CreateNotification
    notification_show = masakariclient.osc.v1.notification:ShowNotification
    notification_list = masakariclient.osc.v1.notification:ListNotification
    segment_create = masakariclient.osc.v1.segment:CreateSegment
    segment_update = masakariclient.osc.v1.segment:UpdateSegment
    segment_delete = masakariclient.osc.v1.segment:DeleteSegment
    segment_show = masakariclient.osc.v1.segment:ShowSegment
    segment_list = masakariclient.osc.v1.segment:ListSegment
    segment_host_create = masakariclient.osc.v1.host:CreateHost
    segment_host_show = masakariclient.osc.v1.host:ShowHost
    segment_host_list = masakariclient.osc.v1.host:ListHost
    segment_host_delete = masakariclient.osc.v1.host:DeleteHost
    segment_host_update = masakariclient.osc.v1.host:UpdateHost

[compile_catalog]
directory = masakariclient/locale
domain = masakariclient

[update_catalog]
domain = masakariclient
output_dir = masakariclient/locale
input_file = masakariclient/locale/masakariclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = masakariclient/locale/masakariclient.pot
