[metadata]
name = python-masakariclient
summary = masakariclient module and a CLI tool for masakari
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-masakariclient/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    masakariclient

[entry_points]
openstack.cli.extension =
    ha = masakariclient.plugin

openstack.ha.v1 =
    notification_create = masakariclient.osc.v1.notification:CreateNotification
    notification_show = masakariclient.osc.v1.notification:ShowNotification
    notification_list = masakariclient.osc.v1.notification:ListNotification
    notification_vmove_show = masakariclient.osc.v1.vmove:ShowVMove
    notification_vmove_list = masakariclient.osc.v1.vmove:ListVMove
    segment_create = masakariclient.osc.v1.segment:CreateSegment
    segment_update = masakariclient.osc.v1.segment:UpdateSegment
    segment_delete = masakariclient.osc.v1.segment:DeleteSegment
    segment_show = masakariclient.osc.v1.segment:ShowSegment
    segment_list = masakariclient.osc.v1.segment:ListSegment
    segment_host_create = masakariclient.osc.v1.host:CreateHost
    segment_host_show = masakariclient.osc.v1.host:ShowHost
    segment_host_list = masakariclient.osc.v1.host:ListHost
    segment_host_delete = masakariclient.osc.v1.host:DeleteHost
    segment_host_update = masakariclient.osc.v1.host:UpdateHost
